Modifica pagina principale

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,9 +1,12 @@
 /* CUSTOMIZE THE CAROUSEL */
 
+body {
+  padding-top: 50px;
+}
+
 /* Carousel base class */
 .carousel {
   height: 500px;
-  margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -19,4 +22,8 @@
   width: 100%;
 	height: 500px;
 	margin: 0 auto;
+}
+
+.navbar.navbar-inverse.navbar-static-bottom {
+  margin-bottom: 0;
 }
