--- a/css/screen.css
+++ b/css/screen.css
@@ -57,3 +57,11 @@ body {
       border-top:0 none;
   }
 }
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
