--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,3 @@
-
-
 html {
   position: relative;
   min-height: 100%;
@@ -63,4 +61,11 @@ body {
   body {
     padding-bottom: 300px;
   }
+}
+
+/*Roba per il footer*/
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
