--- a/css/screen.css
+++ b/css/screen.css
@@ -14,11 +14,6 @@ body {
 .carousel {
   height: 500px;
 }
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
@@ -49,6 +44,16 @@ body {
   margin-bottom: 10px;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.breadcrumb {
+  margin-top: 10px;
+}
+
 @media(max-width:768px){
   #login-dp{
       background-color: inherit;
@@ -63,13 +68,17 @@ body {
   }
 }
 
-/*Roba per il footer*/
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
-.breadcrumb {
-  margin-top: 10px;
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
 }
