--- a/css/screen.css
+++ b/css/screen.css
@@ -20,9 +20,10 @@ body {
   background-color: #777;
 }
 .carousel-inner > .item > img {
-  width: 100%;
-	height: 500px;
-	margin: 0 auto;
+
+  width: 100% ;
+	height: 500px !important;
+	margin: 0 auto ;
 }
 
 /* Login related stuff*/
